# everyday_pixel_fonts

./: .gitattributes  .gitignore  README.md  library.properties  mise.toml  pyproject.toml
bdf_conversions/: Everyday_Ample_Black-9.bdf  Everyday_Ample_Black_Original-9.bdf  Everyday_Ample_Blocky-9.bdf  Everyday_Ample_Blocky_Black-9.bdf  Everyday_Ample_Blocky_Bold-9.bdf  Everyday_Ample_Bold-9.bdf  Everyday_Slight-5.bdf  Everyday_Slight_Bold-5.bdf  Everyday_Slight_Bold_Original-5.bdf  Everyday_Standard_Black-6.bdf  Everyday_Standard_Blocky_Black-6.bdf  Everyday_Tiny_Blocky-4.bdf  Everyday_Tiny_Bold_Original-4.bdf  Everyday_Vast_Black-11.bdf  Everyday_Vast_Blocky_Black-11.bdf  Everyday_Vast_Bold-11.bdf
build_tools/: bdf_to_u8g2.py  compile_bdfconv.py  convert_fonts.fontforge_py  make_bitmap.c  make_example_bitmap.c  make_example_pbms.c  make_example_pngs.py  make_proof_pbms.c  make_proof_pngs.py  make_text_bitmap.c  ttf_to_bdf.fontforge_py  update_u8g2_binaries.py
derived_bdfs/: Everyday_Slight_Blocky_Bold-5.bdf  Everyday_Standard_Black_Original-6.bdf  Everyday_Tiny-4.bdf  Everyday_Tiny_Bold-4.bdf  Everyday_Typical_Black-7.bdf  Everyday_Typical_Bold-7.bdf  Everyday_Typical_Original-7.bdf  Everyday_Vast_Blocky-11.bdf  Everyday_Vast_Bold_Original-11.bdf  Everyday_Vast_Original-11.bdf
processed_bdfs/: Everyday_Ample-9.bdf  Everyday_Ample_Bold_Original-9.bdf  Everyday_Ample_Original-9.bdf  Everyday_Slight_Blocky-5.bdf  Everyday_Slight_Blocky_Black-5.bdf  Everyday_Slight_Original-5.bdf  Everyday_Standard_Blocky-6.bdf  Everyday_Standard_Bold-6.bdf  Everyday_Typical-7.bdf  (+2 more)
(+224 files in other folders)
