# Python metadata for conversion scripts, including dependencies & tool settings
# https://snarky.ca/what-the-heck-is-pyproject-toml

[project]
name = "u8g2_vexed_everyday_fonts"
version = "0.1"
requires-python = ">=3.12"

dependencies = [
    "natsort>=8.4.0",
    "ok-logging-setup>=0.9",
    "ok-subprocess-defaults>=0.1",
    "pillow>=11.3.0",
]
